Use ProcessBuilder instead of Runtime to fix handling of files with multiple consecutive spaces